Add expanded_pizza_layout and some strings

--- a/ARcowabungaproject/res/values/strings.xml
+++ b/ARcowabungaproject/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="app_name">ARcowabungaproject</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="thirdDView">3D View!</string>
+    <string name="pizzaIcon">Pizza icon</string>
 
 </resources>
