--- a/layoutTest/res/values/strings.xml
+++ b/layoutTest/res/values/strings.xml
@@ -4,5 +4,9 @@
     <string name="app_name">layoutTest</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="title_activity_tab1">Tab1</string>
+    <string name="title_activity_tab2">Tab2</string>
+    <string name="title_activity_tab3">Tab3</string>
+    <string name="title_activity_second">SecondActivity</string>
 
 </resources>
