--- a/TestView/res/values/strings.xml
+++ b/TestView/res/values/strings.xml
@@ -5,5 +5,8 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="thirdView">Vista 3D</string>
+    <string name="title_activity_tab1">Tab1</string>
+    <string name="title_activity_tab2">Tab2</string>
+    <string name="title_activity_tab3">Tab3</string>
 
 </resources>
