--- a/ARcowabungaproject/res/values/strings.xml
+++ b/ARcowabungaproject/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="action_settings">Settings</string>
     <string name="thirdDView">3D View!</string>
     <string name="pizzaIcon">Pizza icon</string>
+    <string name="showMore">show more &#9660;</string>
 
 </resources>
