--- a/ARcowabungaproject/res/values/strings.xml
+++ b/ARcowabungaproject/res/values/strings.xml
@@ -5,6 +5,12 @@
     <string name="action_settings">Settings</string>
     <string name="thirdDView">3D View!</string>
     <string name="pizzaIcon">Pizza icon</string>
-    <string name="showMore">show more &#9660;</string>
-
+    <string name="showMore">show more</string>
+    <!-- MAIN ESP-->
+    <string name="menu_esp">CARTA</string>
+    <string name="menu_actual_order_esp">PEDIDO ACTUAL</string>
+    <string name="menu_contact_esp">CONTACTO</string>
+    <string name="menu_last_orders_esp">PEDIDOS ANTERIORES</string>
+    <string name="content_description_img">iconmenu</string>
 </resources>
+
