--- a/ARcowabungaproject/res/values/strings.xml
+++ b/ARcowabungaproject/res/values/strings.xml
@@ -11,6 +11,6 @@
     <string name="menu_contact_esp">CONTACTO</string>
     <string name="menu_last_orders_esp">PEDIDOS ANTERIORES</string>
     <string name="content_description_img">iconmenu</string>
-    <string name="or_choose" >Or choose of this</string>
+    <string name="or_choose" >Or choose one of this</string>
 </resources>
 
