--- a/ARcowabungaproject/res/values/strings.xml
+++ b/ARcowabungaproject/res/values/strings.xml
@@ -18,5 +18,8 @@
     <string name="tab_drinks">DRINKS</string>
     <string name="tab_offers">OFFERS</string>
     <string name="cursor">&#9660;</string>
+    
+    <!-- List Views -->
+    <string name="extraIngredientInProductItem">Suplemento ingredientes extra</string>
 </resources>
 
