--- a/ARcowabungaproject/res/values/strings.xml
+++ b/ARcowabungaproject/res/values/strings.xml
@@ -23,7 +23,12 @@
     <string name="remeber_advertice_title">¡RECUERDA!</string>
     <string name="remeber_advertice_message">Gastos de envío grátis para pedidos superiores a 15€</string>
     <string name="extra_ingredient_in_product_item">Suplemento ingredientes extra</string>
+    
     <!-- Image Content Descriptions -->
     <string name="chef_icon">Chef Icon</string>
+    <string name="basket_icon">Basket Icon</string>
+    
+    <!-- To Earse Examples -->
+    <string name="example_price">32,00€</string>
 </resources>
 
