Add products string

--- a/ARcowabungaproject/res/values/strings.xml
+++ b/ARcowabungaproject/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="tab_pizza">PIZZAS</string>
     <string name="tab_drinks">DRINKS</string>
     <string name="tab_offers">OFFERS</string>
+    <string name="products">PRODUCTS</string>
     <string name="cursor">&#9660;</string>
     
     <!-- List Views -->
