Add expanded_order_ending_layout and some dependant code

--- a/ARcowabungaproject/res/values/strings.xml
+++ b/ARcowabungaproject/res/values/strings.xml
@@ -21,6 +21,8 @@
     <string name="additional_ingredents">Additional ingredients</string>
     <string name="cursor_down">&#9660;</string>
     <string name="cursor_up">&#9650;</string>
+    <string name="redo_order">MAKE ORDER AGAIN</string>
+    
     
     <!-- List Views -->
     
