--- a/ARcowabungaproject/res/values/strings.xml
+++ b/ARcowabungaproject/res/values/strings.xml
@@ -23,8 +23,7 @@
     <string name="cursor_up">&#9650;</string>
     <string name="redo_order">MAKE ORDER AGAIN</string>
     <string name="about_us_tittle">About Us</string>
-    <string name="about_us">We are the fucking best awesome pizzeria in the fucking worl(…, &#8230;)  no, wait. The fucking universe!</string>
-    
+    <string name="about_us">We are the fucking best awesome pizzeria in the fucking worl.. no, wait. The fucking universe!</string>
     
     <!-- List Views -->
     
