Change to uppercase one string

--- a/ARcowabungaproject/res/values/strings.xml
+++ b/ARcowabungaproject/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="menu_contact">CONTACT</string>
     <string name="menu_last_orders">LAST ORDERS</string>
     <string name="content_description_img">iconmenu</string>
-    <string name="or_choose" >Or choose one of this</string>
+    <string name="or_choose" >OR CHOOSE ONE OF THIS</string>
     <string name="create_your_own_pizza" >CREATE YOUR OWN PIZZA</string>
     <string name="create_your_own_pizza_desc" >To your taste with your favorite ingredients and your preferred mass!</string>
     <string name="tab_pizza">PIZZAS</string>
