--- a/ARcowabungaproject/res/values/strings.xml
+++ b/ARcowabungaproject/res/values/strings.xml
@@ -28,15 +28,12 @@
     
     <!-- Shopping cart layout -->
     <string name="remeber_advertice_title">REMEMBER!</string>
-    <string name="remeber_advertice_message">FREE Shipping over 15€!</string>
-    <string name="extra_ingredient_in_product_item">Suplemento ingredientes extra</string>
+    <string name="remeber_advertice_message">FREE Shipping!</string>
+    <string name="extra_ingredient_in_product_item">Extras</string>
     <string name="total_text">TOTAL</string>
-    <string name="total_price">30,70€</string>
     <string name="subtotal_text">SUBTOTAL</string>
-    <string name="subtotal_value">25,35€</string>
-    <string name="taxes_text">+ 21% de IVA</string>
-    <string name="taxes_value">5,35€</string>
-    <string name="shipping_cost_text">+ Gastos de envio</string>
+    <string name="taxes_text">+ 10% TAX</string>
+    <string name="shipping_cost_text">+ Shipping costs</string>
     <string name="shipping_cost_value">0,00€</string>
     <string name="shipping_begin_value">(0) 0,00€</string>
     <string name="shipping_leftbutton_moreitems">ADD MORE ITEMS</string>
@@ -47,7 +44,6 @@
     <string name="basket_icon">Basket Icon</string>
     
     <!-- End Layout Buttons -->
-    <string name="button_price">32,00€</string>
     
     <!-- Contact Activity -->
     <string name="contact_telephone">TELEPHONE: 93 666 666</string>
